@@ -174,6 +174,8 @@ New Features
 
 * SOLR-4392: Make it possible to specify AES encrypted password in dataconfig.xml (Noble Paul)
 
+* SOLR-7461: stats.field now supports individual local params for 'countDistinct' and 'distinctValues'.
+  'calcdistinct' is still supported as an alias for both options (hossman)
 
 Bug Fixes
 ----------------------
